# Impulcifer-Atmos

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  atmos_brir for EQAPO.txt  benchmark_realtime_convolver.py  capture_wizard.py  compensation.py  config.py  conftest.py  constants.py  crosstalk.py  earprint.py  generate_layout.py  gui.py  hrir.py  impulcifer.py  impulse_response.py  impulse_response_estimator.py  level_meter.py  preset_manager.py  processing-presets.json  profiles.json  pyproject.toml  realtime_convolution.py  recorder.py  requirements.txt  room_correction.py  room_presets.json  speaker_delay.py  test_impulcifer.py  test_impulcifer_714.py  test_layouts.py  test_measurement_setup_vm.py  test_user_layout.py  test_viewmodels.py  tracking.py  user_profiles.py  (+1 more)
EarprintGUI/: Package.swift  README.md
EarprintGUI/Resources/EmbeddedPython/: README.md
EarprintGUI/Scripts/: capture_wizard.py  compensation.py  config.py  constants.py  generate_layout.py  level_meter.py  preset_manager.py  profiles.json  realtime_convolution.py  recorder.py  room_correction.py  room_presets.json  room_presets.py  speaker_delay.py  tracking.py  user_profiles.py  utils.py
EarprintGUI/Scripts/models/: recorder_settings.py
EarprintGUI/Scripts/tests/: conftest.py  test_capture_wizard.py  test_earprint.py  test_earprint_51.py  test_earprint_714.py  test_earprint_ambisonics.py  test_head_tracking.py  test_realtime_convolver.py  test_speaker_delay.py  test_user_profiles.py  test_viewmodels.py
EarprintGUI/Scripts/viewmodel/: playback.py  processing.py  recorder.py
EarprintGUI/Sources/EarprintGUI/: App.swift  AudioPreviewer.swift  CoreAudioUtils.swift  Utilities.swift  main.swift
SwiftGUI/: Package.swift
cpp/: RealTimeConvolver.cpp  RealTimeConvolver.h
cpp/aax/: CMakeLists.txt  HRIR.cpp  HRIR.h  TrueRoom.cpp  TrueRoom.h  TrueRoomPlugin.cpp  TrueRoomPlugin.h
data/: tracking_calibration.json
docs/: AAX_PLUGIN.md  ARCHITECTURE.md  DEVELOPMENT.md  TOOLS.md
models/: __init__.py  measurement_setup.py  playback_settings.py  processing_settings.py  recorder_settings.py  room_preset.py  user_profile.py
research/headphone-feedback-compensation/: compare_headphone_compensation_methods.py  generate_headphone_sweep_sequence.py
research/headphone-reseat-repeatability/: headphone_reseat_repeatability.py
research/open-vs-closed-ear-canal/: open_vs_closed_ear_canal.py
research/room-targets/: room_targets.py
research/speaker-balance-graphs/: speaker_balance_graphs.py
tests/: conftest.py  test_crosstalk_viewmodel.py  test_head_tracking.py  test_impulcifer.py  test_impulcifer_51.py  test_impulcifer_714.py  test_impulcifer_ambisonics.py  test_layouts.py  test_measurement_setup_vm.py  test_preset_manager.py  test_realtime_convolver.py  test_room_presets.py  test_speaker_delay.py  test_user_layout.py  test_user_profiles.py  test_viewmodels.py
tools/: remove_excessive_headers.py
viewmodel/: __init__.py  layout.py  measurement_setup.py  playback.py  processing.py  recorder.py
(+236 files in other folders)
